--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,20 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.greenButton{
+  @apply bg-lightGreen w-fit mx-auto px-5 py-1 rounded-xl;
+}
+
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent; 
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+  background: #fff; 
+}
